--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,59 @@
 #fondo-menu{
     background-color: rgb(127, 249, 255);
 }
+
+
+#fondo-menu.navbar{
+    margin: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+.user-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .user-container img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer;
+  }
+  
+  .user-dropdown {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    z-index: 1;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    display: none;
+  }
+  
+  .user-dropdown ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .user-dropdown li {
+    margin: 0;
+    padding: 5px 10px;
+  }
+  
+  .user-dropdown li a {
+    text-decoration: none;
+    color: #000;
+  }
+  
+  .user-dropdown li:hover {
+    background-color: #f5f5f5;
+  }
+  
+  .user-container:hover .user-dropdown {
+    display: block;
+  }
+  
