--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,9 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 }
-
+.search {
+    width: 150px; /* ajusta el ancho según sea necesario */
+}
 .formulario_usuarios {
   display: flex;
   justify-content: center;
