--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 /*Menú principal*/
 #fondo-menu{
-    background-color: #5EAE8F;
+    /*background-color: #5EAE8F;*/
+    background-color: #8970d2;
     
 }
 #fondo-menu.navbar{
@@ -65,8 +66,24 @@
 /*Barra de búsqueda*/
 .search {
     width: 150px; /* ajusta el ancho según sea necesario */
+    background: #5C469C;
+  background-image: linear-gradient(to bottom, #b372ca, #35205A);
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 25px;
+  width: 250px;
     
 }
+
+
+#boton-busqueda {
+  background-color: #D4ADFC;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+
 /*Tarjetas animales*/
 .card {
   height: 450px;
