--- a/assets/style.css
+++ b/assets/style.css
@@ -66,15 +66,50 @@
 /*Barra de búsqueda*/
 .search {
     width: 150px; /* ajusta el ancho según sea necesario */
-    background: #5C469C;
-  background-image: linear-gradient(to bottom, #b372ca, #35205A);
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: #95469c;
+    background-image: linear-gradient(to bottom, #d75ad9, #b8279b);
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: #fff;
+    padding: 8px 16px;
+    border-radius: 25px;
+    width: 250px;
+}
+.search:hover {
+  background-image: linear-gradient(to bottom, #d97bb2, #ce1e91);
+  cursor: pointer;
+}
+
+.search::-webkit-input-placeholder {
+  /* Resalta el texto "Search" en el campo de entrada */
   color: #fff;
-  padding: 8px 16px;
-  border-radius: 25px;
-  width: 250px;
-    
+  font-weight: bold;
+  font-style: italic;
+  text-shadow: 1px 1px #000;
+}
+
+.search::-moz-placeholder {
+  /* Resalta el texto "Search" en el campo de entrada para Firefox */
+  color: #fff;
+  font-weight: bold;
+  font-style: italic;
+  text-shadow: 1px 1px #000;
+}
+
+.search:-ms-input-placeholder {
+  /* Resalta el texto "Search" en el campo de entrada para IE */
+  color: #fff;
+  font-weight: bold;
+  font-style: italic;
+  text-shadow: 1px 1px #000;
+}
+
+.search:-moz-placeholder {
+  /* Resalta el texto "Search" en el campo de entrada para versiones antiguas de Firefox */
+  color: #fff;
+  font-weight: bold;
+  font-style: italic;
+  text-shadow: 1px 1px #000;
 }
 
 
