--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+#contenido{
+  margin-left:200px ;
+  margin-right:200px ;
+}
+
 /*Menú principal*/
 #fondo-menu{
     /*background-color: #5EAE8F;*/
@@ -231,7 +236,16 @@ a:hover {
   color: #5EAE8F;
 }
 
+/*Carrusel inicio*/
+#carruselIni{
+margin: 0 auto;
+width: 100%;
 
+}
+
+.card>img{
+  object-fit:cover;
+}
   
 
 
